--- a/src/task-03.html
+++ b/src/task-03.html
@@ -14,6 +14,7 @@
         line-height: 1.5;
       }
     </style>
+    <link rel="stylesheet" type="text/css" href="/src/css/task-03.css">
   </head>
   <body>
     <p><a href="index.html">На главную</a></p>
